<resources>
    <string name="app_name">OrderApp</string>
    <string name="product_screen_name">Termékek</string>
    <string name="help_text"> Kérlek adj meg egy érvényes e-mail címet és jelszót. A jelszónak legalább 6 karakternek kell lennie! </string>
    <string name="default_notification_channel_id">123</string>
    <string name="data_loading_error">Nem sikerült betölteni az adatokat.</string>
    <string name="save_error">Sikertelen mentés.</string>
    <string name="save_success">Sikeres mentés.</string>
    <string name="delete_error">A törlés nem sikerült.</string>
    <string name="delete_success">Sikeres törlés.</string>
    <string name="invalid_email_error">Helytelen e-mail cím</string>
    <string name="invalid_price_input">A termék ára nem lehet nulla.</string>
    <string name="email_sent_to_recover_pwd">E-mailt küldtünk jelszavad helyreállításához.</string>
    <string name="invalid_quantity">A tétel mennyisége nem megfelelő formátumban van!</string>
    <string name="input_is_empty">A mező nem lehet üres</string>
    <string name="invalid_number_input">A mező csak számokat tartalmazhat.</string>
    <string name="invalid_letters_input">A mező csak betűket tartalmazhat.</string>
    <string name="invalid_password">Helytelen jelszó formátum.</string>
    <string name="invalid_customer_inputs">Kérlek ellenőrízd az ügyfél adatait.</string>
    <string name="invalid_product_input">Kérjük ellenőrízd a termék adatait!</string>
    <string name="pdf_saved">Sikeres PDF mentés.</string>
    <string name="pdf_error">Sikertelen PDF mentés</string>
    <string name="adding">Adding new order</string>
    <string name="sign_in_error">Az e-mail cím vagy jelszó formátuma nem megfelelő vagy ezzel az e-maillel már regisztráltak!</string>
    <string name="sign_up_error">Helytelen adatok.</string>
</resources>